banner code added,client fixes,image optimization added

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </span>
         </section> -->
         <section class="qualitycard">
-            <h2>Reason to trust Us</h2>
+            <h2>Reason To Trust Us</h2>
             <div class="cardscontainer">
                 <div class="qcard">
                     <lottie-player class="animation" src="./lottiejson/agent.json" background="transparent" speed="1"
@@ -1196,35 +1196,36 @@
                     <p>About trip</p>
                     <h2>Description</h2>
                     <br>
-                    <p>Dive into a 4-night, 5-day escapade in the enchanting Kashmir Valley! Lose yourself in the
-                        scenic vistas, from the pristine Dal Lake in Srinagar to the majestic landscapes of Gulmarg.
-                        Taste the local flavours, embrace the culture, and create memories that linger. Come, let's
-                        paint your travel diary with the hues of Kashmir!</p>
-                    <br>
-                    Inclusions
-                    <br>
-                    <ul>
-                        <li>
+                    <p>
+                        Embark on a 2-Night, 3-Day Royal Retreat in Udaipur!
+                        <br>
+                        Prepare for a captivating 2-night, 3-day journey into the heart of Rajasthan - welcome to the
+                        Venice of the East, Udaipur! This short yet delightful escapade promises to immerse you in the
+                        grandeur and culture of this historic city.
+                        <br>
+                        <b> Day 1</b>: Arrival and Lakeside Charm
+                        As you arrive in Udaipur, you'll instantly be enchanted by the ethereal beauty of its lakes.
+                        Check into your chosen accommodation, strategically located by the lake, and let the shimmering
+                        waters soothe your soul. Take a leisurely walk along the lake promenade and absorb the city's
+                        charm.
+                        <br>
 
-                            Local travel
-                        </li>
-                        <li>
+                        <b> Day 2</b>: City Palace and Cultural Sojourn
+                        Explore the opulent City Palace, a true marvel of architecture that offers a glimpse into the
+                        royal history of Udaipur. Immerse yourself in the city's rich cultural heritage at the Saheliyon
+                        Ki Bari and Jag Mandir. In the evening, enjoy a cultural performance that brings the traditional
+                        Rajasthani folk art to life.
+                        <br>
 
-                            Stays
-                        </li>
-                        <li>
+                        <b> Day 3</b>: Boat Ride and Farewell to Udaipur
+                        Embark on a serene boat ride on Lake Pichola, allowing you to witness the city's majestic
+                        palaces against the backdrop of the Aravalli Hills. Bid farewell to the City of Lakes, taking
+                        with you memories of its regal charm and warm hospitality.
+                        <br>
 
-                            Meals
-                        </li>
-                        <li>
-
-                            Trip leader
-                        </li>
-                        <li>
-
-                            Group of 12
-                        </li>
-                    </ul>
+                        This 2-night, 3-day Udaipur trip is designed to provide a glimpse into the city's royal past,
+                        scenic beauty, and cultural richness. Let's paint your travel diary with the hues of Udaipur!
+                    </p>
                     <br>
                     <button>
                         <a href="https://wa.me/917307309609"><i class="fa-brands fa-whatsapp"></i>
@@ -1533,7 +1534,7 @@
         <script>
             (function (widget) {
                 widget.setConfig({
-                    eventSlug: "kashmir-a-nature-lovers-dream",
+                    eventSlug: "udaipur-kumbhalgarh",
                     placement: "#book-container",
                     customClass: "btn-custom",
                     btnId: "logout-bnb",
@@ -1706,7 +1707,7 @@
     !function (f, b, e, v, n, t, s) {
         if (f.fbq) return; n = f.fbq = function () {
             n.callMethod ?
-            n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
         };
         if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
         n.queue = []; t = b.createElement(e); t.async = !0;
